# fabric

./: .cursorignore  .env.example  .env.install-cdn.example  .gitignore  docker-compose.yml  install.ps1  install.sh
deploy/: .env.example  .env.prod.example  (+9 more)
todo-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  jenkins-pipeline.json  manage.py  pyproject.toml
todo-server/fabric/: asgi.py  urls.py  wsgi.py
todo-server/fabric/apps/base/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
todo-server/fabric/apps/base/management/: __init__.py
todo-server/fabric/apps/base/migrations/: 0001_initial.py  0002_image_file_ext.py  0003_userconfig.py  0004_user_email_subscription_user_email_verified_and_more.py
todo-server/fabric/apps/base/services/: README.md  __init__.py  email_service.py
todo-server/fabric/apps/fabrics/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
todo-server/fabric/apps/fabrics/management/: __init__.py
todo-server/fabric/apps/grid/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
todo-server/fabric/core/: custom_exception_handler.py
todo-server/fabric/settings/: __init__.py  base.py  dev.py  email_settings_example.py  prod.py
todo-server/fabric/templates/emails/: fabric_update_notification.html  fabric_update_notification.txt  password_reset_email.html  password_reset_email.txt  verification_email.html  verification_email.txt  welcome_email.html  welcome_email.txt
todo-server/templates/base/: base.html
(+321 files in other folders)
