[project]
name = "todo-server"
version = "0.1.0"
description = "Fabric & TODO Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "django==5.2",
    "django-cors-headers==4.7.0",
    "django-rest-framework==0.1.0",
    "djangorestframework==3.16.0",
    "drf-yasg==1.21.10",
    "gunicorn==23.0.0",
    "inflection==0.5.1",
    "minio==7.2.15",
    "packaging==25.0",
    "pillow==11.2.1",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pyjwt==2.10.1",
    "pymysql==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==6.1.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.13.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "whitenoise==6.9.0",
]

[tool.uv]
python = 3.13